# MII_CC_UGR

./: .gitignore  LICENSE  README.md  compose.yml  render.yaml  test_cluster.sh
.github/workflows/: aichronos-pytest.yml  deploy-render.yml  release_package.yml
docs/: hito1.md  hito2.md  hito3.md  hito4.md  hito5.md
docs/hito1/: config_repo.md  hu.md  milestones.md  tecnologies.md
docs/hito2/: assertion_library.md  continous_integration.md  repo_usage.md  tasks_manager.md  testing_framework.md
docs/hito3/: logger.md
docs/hito4/: base_image.md  compose.md  dockerfiles.md  github_packages.md
docs/hito5/: deploy_githubActions.md  deployment_tool.md  paas_selection.md
src/api/: .env_production  Dockerfile  pyproject.toml  render_api.yaml
src/api/app/: logger_config.py  main.py
src/api/app/internal/: async_openai.py  db.py  models.py
src/api/app/internal/prompts/: system_prompt.yml
src/api/app/routers/: healthcheck.py  profile.py  prompt.py  stats.py
src/api/tests/: conftest.py  test_fastapi_api.py  test_main.py
src/db_blueprint/: render_db.yaml
src/web/: .env_production  Dockerfile  pyproject.toml  render_web.yaml
src/web/app/: __init__.py  auth.py  logger_config.py  models.py
src/web/static/css/: auth.css  index.css
src/web/static/js/: index.js  rain.js
src/web/templates/: base_auth.html  index.html
src/web/templates/auth/: login.html  register.html
src/web/tests/: conftest.py  test_flask_app.py
