[tool.poetry]
name = "api"
version = "1.0.0"
description = "API AICHRONOS"
authors = ["v-lastrucci-c <v.lastrucci.c@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[tool.taskipy.tasks]
test = "pytest --cov=app --cov-report=html --cov-report=xml tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
